# porter_robot

./: .gitattributes  .gitignore  .gitmodules  .rosinstall  .rosinstall.bak  README.md  install.sh  package.xml
config/: diffdrive.yaml
installation_files/: dbow2_10.04.2020-1_arm64.deb  dbow2_11.04.2020-1_arm64.deb  dbow2_2020.04.05-1_arm64.deb  g2o_2020.04.04-1_arm64.deb  libva_2.7.1-1_amd64.deb  pangolin-viewer_2020.04.04-1_arm64.deb
installation_files/Platform/: Pangolin-0.5.0-Linux.deb  dbow2_05.05.2020-1_arm64.deb  dbow2_20200509-1_arm64.deb  g2o-0.1.1-Linux.deb  g2o_10.05.2020-1_arm64.deb
installation_files/Simulation/: Pangolin-0.5.0-Linux.deb  dbow2_01.05.2020-1_amd64.deb  g2o-0.1.1-Linux.deb
launch/: diffdrive.launch  gazebo.launch  gsim_xacro.launch  rviz_urdf.launch  rviz_xacro.launch
model/: model.xacro  model_xacro.urdf
model/meshes/: Caster_N180915.3ds.dae
openvslam/: CMakeLists.txt
openvslam/ros/src/openvslam/: CMakeLists.txt  package.xml
openvslam/ros/src/openvslam/src/: CMakeLists.txt  mono_slam.cc  my_impl.cpp  rgbd_slam.cpp  rgbd_slam_ac.cpp  run_localization.cc
porter_2dnav/: CMakeLists.txt  package.xml
porter_2dnav/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml
porter_2dnav/launch/: map_creation.launch  move_base+amcl.launch  move_base.launch  opensource_tracking.launch  openvslam.launch  orb_slam2_d435_rgbd.launch  orb_slam2_d435i_rgbd.launch
porter_map/: 22.04.2020_g.yaml  22.04.20_gf.yaml  22.04.20_gg.yaml  CMakeLists.txt  garage.yaml  package.xml  small_town.yaml
porter_odometry/: CMakeLists.txt  package.xml
porter_odometry/src/: odom.cpp
porter_robot/: CMakeLists.txt  README.md  package.xml
porter_robot/config/: diffdrive.yaml
porter_robot/launch/: diffdrive.launch  diffdrive_sim.launch  gsim_xacro.launch  record.launch
porter_robot/scripts/: calibration.py  camera_node.py  odrive.py  odrive_node.py  odrive_node_UART.py  odrive_node_USB.py  transfer.py
porter_robot_model/: CMakeLists.txt  package.xml
porter_robot_model/meshes/: Caster_N180915.3ds.stl
porter_robot_simulation/: CMakeLists.txt  package.xml
porter_sensors/: CMakeLists.txt  package.xml
porter_stereo/: CMakeLists.txt  package.xml
porter_stereo/config/: left.yaml  (+2 more)
scripts/: calibration.py  transfer.py
(+77 files in other folders)
