<?xml version="1.0"?>
<package format="2">
  <name>porter_robot</name>
  <version>0.0.1</version>
  <description>The porter_robot package</description>

  <maintainer email="d.desyatkin@innopolis.university">Dmitrii Desiatkin</maintainer>


  <license>BSD</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/porter_description</url> -->
  <!-- Later add github project here -->



  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
